--- a/src/partie_3.tex
+++ b/src/partie_3.tex
@@ -2,7 +2,7 @@
 
 \chapter{Résultats - Discussions}
 
-Je vais maintenant vous présenter dans ce chapitre la solution obtenue après le développement et livré au client.
+Je vais maintenant vous présenter dans ce chapitre la solution obtenue après le développement et la livraison au client.
 De plus je présenterai mes impressions durant sa réalisation, dans le domaine technique et fonctionnel.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -72,7 +72,7 @@ La seconde est liée au compte de l'utilisateur, avec des liens permettant de ch
 
 \subsubsection{Menu latéral}
 
-Une barre latéral située sur la partie gauche propose un \textit{menu}.
+Une barre latérale située sur la partie gauche propose un \textit{menu}.
 Chaque ligne de ce menu correspond à un module de l'application, comme expliqué dans la partie \ref{Programmation modulaire}.
 La figure \ref{menu} est une capture d'écran du menu, montrant les différents menus de l'application.
 
@@ -171,7 +171,7 @@ Travailler en assistance chez le client m'a permis de découvrir un univers tota
 
 L'avantage est d'être en contact direct avec le client, ce qui permet d'avoir des informations en temps réel. Cela évite donc de devoir appeler ou échanger des mails, et les explications sont plus claires.
 
-En contrepartie, le client a tendance à demande l'état d'avancement du projet plus régulièrement.
+En contrepartie, le client a tendance à demander l'état d'avancement du projet plus régulièrement.
 Cette proximité procure une pression supplémentaire, notamment lorsque le projet est en retard sur les prévisions.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
