--- a/src/resume.tex
+++ b/src/resume.tex
@@ -14,7 +14,7 @@ Tout d'abord, j'ai étudié les besoins du client, ainsi que l'ancienne solution
 Après le choix des technologies, j'ai développé une première version fonctionnelle de l'application.
 Celle-ci a permis au client d'énumérer les problèmes et proposer des améliorations ergonomiques et fonctionnelles.
 
-Une fois l'application opérationnelle et son déploiement effectué, il ne restait plus qu'à importer les données de l'ancienne base de données pour permettre une transition efficace.
+Une fois l'application opérationnelle et son déploiement effectué, il ne restait plus qu'à importer les données de l'ancienne base pour permettre une transition efficace.
 \\
 
 \textbf{Mots clé : } Sopra Group, Microsoft, VB.NET, Silverlight, SQL Server, WCF RIA Services
