--- a/src/partie_1.tex
+++ b/src/partie_1.tex
@@ -16,10 +16,10 @@
 
 \subsection{Historique}
 
-\textit{Sopra Group} est une Sociétés de Service en Ingénierie Informatique, couramment appelé SSII.
-Créée en 1968 par Pierre PASQUIER et François ODIN, il s'agit d'un des plus anciennes et importante SSII.
+\textit{Sopra Group} est une Société de Service en Ingénierie Informatique, couramment appelé SSII.
+Créée en 1968 par Pierre PASQUIER et François ODIN, il s'agit d'une des plus anciennes et importantes SSII.
 La société s'est d'abord révélée au niveau national grâce à de grands projets dans les domaines bancaires et avec le Ministère de l'Intérieur, avant de s'implanter au niveau européen et mondial.
-Avec plus de 14.300 collaborateurs en 2012, Sopra Group réalise un chiffre d'affaire supérieur à 1,2 milliards d'euros, principalement dans le domaine du conseil et des services en France.
+Avec plus de 14.300 collaborateurs en 2012, Sopra Group réalise un chiffre d'affaires supérieur à 1,2 milliards d'euros, principalement dans le domaine du conseil et des services en France.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -27,12 +27,12 @@ Avec plus de 14.300 collaborateurs en 2012, Sopra Group réalise un chiffre d'af
 
 \subsection{Agence de Clermont-Ferrand}
 
-Michelin est le plus gros employeur de la région Auvergne, mais fait aussi appel à de nombreuses sociétés extérieures comme les sociétés de service.
+Michelin est le plus gros employeur de la région Auvergne, mais fait aussi appel à de nombreuses sociétés extérieures comme les sociétés de services.
 Dû au nombre croissant de collaborateurs travaillant chez Michelin, la division Rhône-Alpes a créé l'agence de Clermont-Ferrand pour être au plus proche du client.
 
 L'agence de Clermont-Ferrand travaille aussi sur plusieurs autres projets importants.
-Le pôle identité qui est spécialisé dans la gestion de titres (documents d'identité, passeport, cartes à puce, \ldots) grâce aux projets Sides et plus récemment SITI, travaillant pour une quinzaine de gouvernements.
-Le groupe Limagrain, dont le siège social est situé Chappes, fait actuellement appelle aux services de Sopra Group pour la réalisation du projet Boss.
+TODO: verbe Le pôle identité mène les projets Sides et SITI spécialisés dans la gestion de titres (documents d'identité, passeport, cartes à puce, \ldots), et travaille pour une quinzaine de gouvernements.
+Le groupe Limagrain, dont le siège social est situé Chappes, fait actuellement appel aux services de Sopra Group pour la réalisation du projet Boss.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -48,7 +48,7 @@ Le groupe Limagrain, dont le siège social est situé Chappes, fait actuellement
 
 \subsection{Besoin de l'utilisateur}
 
-Durant l'été, saison des récoltes des céréales, Limagrain emploie de nombreux travailleurs.
+Durant l'été, saison des récoltes de céréales, Limagrain emploie de nombreux travailleurs.
 Il s'agit principalement de contrats saisonniers ou à durée déterminée.
 \\
 
@@ -56,12 +56,12 @@ Le service de recrutement du groupe Limagrain a besoin d'enregistrer les informa
 En effet, le service emploie de préférence d'anciens candidats.
 De plus, les contrats sont parfois renouvelés plusieurs fois durant la saison ou chaque année.
 
-L'Urssaf, unions de recouvrement des cotisations de sécurité sociale et d'allocations familiales, impose la saisie d'un document : la DAPE, déclaration préalable à l'embauche.
-Pour chaque recrutement il est donc nécessaire de remplir ce document avec les informations du candidat ainsi que du contrat.
-Le client désire donc pouvoir générer automatiquement ces documents, lui évitant ainsi de les saisir manuellement un par un pour chaque contrat.
+L'Urssaf, union de recouvrement des cotisations de sécurité sociale et d'allocations familiales, impose la saisie d'un document : la DAPE, déclaration préalable à l'embauche.
+Pour chaque recrutement, il est donc nécessaire de remplir ce document avec les informations du candidat ainsi que du contrat.
+Le client désire donc pouvoir générer automatiquement ces documents, lui évitant ainsi de les saisir manuellement un par un et par contrat.
 
 Pour faciliter le recrutement d'anciens candidats, ou la recherche de candidats disponibles, le client désire avoir différentes fonctionnalités de recherche.
-Il peut s'agir par exemple de la recherche de candidats disponibles à certaines périodes, ou les candidats ayant un contrat en cours dont il n'a pas fourni toutes les pièces justificatives.
+Il peut s'agir, par exemple, de la recherche de candidats disponibles à certaines périodes, ou les candidats ayant un contrat en cours et qui n'ont pas fourni toutes les pièces justificatives.
 
 Enfin pour pouvoir augmenter leur productivité, il sera nécessaire de produire une application ergonomique et facile d'utilisation permettant la saisie de nombreuses données le plus rapidement possible.
 Limagrain reçoit en effet plus de 1.000 candidatures en moins d'un mois dont une grande partie effectue des contrats.
@@ -96,9 +96,9 @@ En étudiant la solution actuelle, les chefs de projet et architectes ont décid
 Cette nouvelle solution devra répondre aux besoins de l'utilisateur, en corrigeant les inconvénients de l'ancienne ainsi qu'en apportant de nouvelles fonctionnalités.
 \\
 
-Il est tout débord nécessaire de changer de base de données pour se tourner vers un système plus performant et centralisé.
+Il est tout d'abord nécessaire de changer de base de données pour se tourner vers un système plus performant et centralisé.
 Un nouveau schéma de données adapté aux nouveaux besoins permettra de mieux structurer ces données.
 
 Pour améliorer l'ergonomie de l'application, la nouvelle solution sera un \textit{client léger}.
-Dans ce projet nous ne rencontrerons pas les inconvénients qu'offre cette solution, comme les performances ou les problèmes qui affecteront tous les utilisateurs.
+Dans ce projet nous ne rencontrerons pas les inconvénients qu'offrent cette solution, comme les performances ou les problèmes qui affecteront tous les utilisateurs.
 Par contre, un simple site web offre les avantages d'un déploiement unique, d'une maintenance simple, car cela ne se fait que sur le serveur et non sur chacun des ordinateurs des utilisateurs.
