--- a/src/remerciements.tex
+++ b/src/remerciements.tex
@@ -9,8 +9,8 @@
 Je tiens à remercier les personnes qui m'ont accueilli et accompagnés durant ces 6 mois de stage chez Sopra Group.
 \\
 
-Je remercie tout d'abord l'équipe du projet Sides, notamment Delphine JARIGE, pour mon accueil en ce début de stage.
+Je remercie tout d'abord l'équipe du projet Sides, notamment Delphine JARIGE, pour son accueil en ce début de stage.
 
-J'adresse aussi mes remerciements à l'équipe du projet Limagest, sujet de cette étude : le chef de projet Laurent LAFFERRÈRE pour son accompagnement au niveau fonctionnel, ainsi que l'architecte Xavier CLEMENCE pour son aide apporté lors des difficultés rencontrées.
+J'adresse aussi mes remerciements à l'équipe du projet Limagest, sujet de cette étude : le chef de projet Laurent LAFFERRÈRE pour son accompagnement au niveau fonctionnel, ainsi que l'architecte Xavier CLEMENCE pour son aide apportée lors des difficultés rencontrées.
 
-Enfin, je remercie l'équipe du projet de l'Imprimerie Nationale : Pierre DASCHET le chef du projet, Ambroise ROQUETTE l'architecte, mais aussi les développeurs, pour l'aide apporté lors de mon affectation au projet.
+Enfin, je remercie l'équipe du projet de l'Imprimerie Nationale : Pierre DASCHET le chef du projet, Ambroise ROQUETTE l'architecte, mais aussi les développeurs, pour l'aide apportée lors de mon affectation au projet.
