--- a/src/glossaire.tex
+++ b/src/glossaire.tex
@@ -6,15 +6,17 @@
 
 
 
-\textbf{BDD :} Base De Données.
-
+\textbf{BDD :} Base de données.
+\\
 
 \textbf{Client léger :} application fonctionnant dans un navigateur web, ne nécessitant aucune autre installation.
+\\
 
 %\newglossaryentry{framework}{
 %	name = Framework,
 %	description = ensemble de composants logiciels permettant le développement le développement rapide d'applications.
 %}
 \textbf{Framework :} ensemble de composants logiciels permettant le développement le développement rapide d'applications.
+\\
 
 \textbf{XML :} "Extensible Markup Language" langage de balisage générique.
