--- a/src/remerciements.tex
+++ b/src/remerciements.tex
@@ -13,4 +13,4 @@ Je remercie tout d'abord l'équipe du projet Sides, notamment Delphine JARIGE, p
 
 J'adresse aussi mes remerciements à l'équipe du projet Limagest, sujet de cette étude : le chef de projet Laurent LAFFERRÈRE pour son accompagnement au niveau fonctionnel, ainsi que l'architecte Xavier CLEMENCE pour son aide apportée lors des difficultés rencontrées.
 
-Enfin, je remercie l'équipe du projet de l'Imprimerie Nationale : Pierre DASCHET le chef du projet, Ambroise ROQUETTE l'architecte, mais aussi les développeurs, pour l'aide apportée lors de mon affectation au projet.
+Enfin, je remercie l'équipe du projet de l'Imprimerie Nationale : Pierre DASCHER le chef de projet, Ambroise ROQUETTE architecte, mais aussi les développeurs, pour l'aide apportée lors de mon affectation au projet.
