Partie II : descente d'un niveau

--- a/src/page_de_garde.tex
+++ b/src/page_de_garde.tex
@@ -12,7 +12,7 @@
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	
 		% Logo
-		\includegraphics[scale=0.09]{img/ISIMA_logo.png}					\\
+		\includegraphics[scale=0.09]{img/ISIMA.png}							\\
 		
 		% Nom
 		\textbf{I}nstitut \textbf{S}upérieur								\\
@@ -37,7 +37,7 @@
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		
 		% Logo
-		\includegraphics[scale=0.07]{img/SopraGroupe_Logo.png}				\\
+		\includegraphics[scale=0.07]{img/Sopra_Group.png}					\\
 		
 		% Nom
 		Sopra Group
