--- a/src/partie_3.tex
+++ b/src/partie_3.tex
@@ -73,7 +73,7 @@ La seconde est liée au compte de l'utilisateur, avec des liens permettant de ch
 \subsubsection{Menu latéral}
 
 Une barre latérale située sur la partie gauche propose un \textit{menu}.
-Chaque ligne de ce menu correspond à un module de l'application, comme expliqué dans la partie \ref{Programmation modulaire}.
+Chaque ligne de ce menu correspond à un module de l'application, comme expliqué précédemment.
 La figure \ref{menu} est une capture d'écran du menu, montrant les différents menus de l'application.
 
 De plus, un sous-menu de second niveau apparait lorsque l'on sélectionne un menu.
