Rassemblement de Limagrain dans III + Plan Sides dans II

--- a/Rapport.tex
+++ b/Rapport.tex
@@ -195,6 +195,9 @@
 %%%%%%%%%% Chapitre 3 %%%%%%%%%%
 \input{src/partie_3}
 
+%%%%%%%%%% Chapitre 3 %%%%%%%%%%
+\input{src/partie_4}
+
 %%%%%%%%%% Conclusion %%%%%%%%%%
 \input{src/conclusion}
 
