--- a/src/partie_1.tex
+++ b/src/partie_1.tex
@@ -32,73 +32,4 @@ Dû au nombre croissant de collaborateurs travaillant chez Michelin, la division
 
 L'agence de Clermont-Ferrand travaille aussi sur plusieurs autres projets importants.
 TODO: verbe Le pôle identité mène les projets Sides et SITI spécialisés dans la gestion de titres (documents d'identité, passeport, cartes à puce, \ldots), et travaille pour une quinzaine de gouvernements.
-Le groupe Limagrain, dont le siège social est situé Chappes, fait actuellement appel aux services de Sopra Group pour la réalisation du projet Boss.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Étude du problème}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Besoin de l'utilisateur}
-
-Durant l'été, saison des récoltes de céréales, Limagrain emploie de nombreux travailleurs.
-Il s'agit principalement de contrats saisonniers ou à durée déterminée.
-\\
-
-Le service de recrutement du groupe Limagrain a besoin d'enregistrer les informations de chacun de ses employés pour ne pas avoir à les ressaisir lors des prochains contrats.
-En effet, le service emploie de préférence d'anciens candidats.
-De plus, les contrats sont parfois renouvelés plusieurs fois durant la saison ou chaque année.
-
-L'Urssaf, union de recouvrement des cotisations de sécurité sociale et d'allocations familiales, impose la saisie d'un document : la DAPE, déclaration préalable à l'embauche.
-Pour chaque recrutement, il est donc nécessaire de remplir ce document avec les informations du candidat ainsi que du contrat.
-Le client désire donc pouvoir générer automatiquement ces documents, lui évitant ainsi de les saisir manuellement un par un et par contrat.
-
-Pour faciliter le recrutement d'anciens candidats, ou la recherche de candidats disponibles, le client désire avoir différentes fonctionnalités de recherche.
-Il peut s'agir, par exemple, de la recherche de candidats disponibles à certaines périodes, ou les candidats ayant un contrat en cours et qui n'ont pas fourni toutes les pièces justificatives.
-
-Enfin pour pouvoir augmenter leur productivité, il sera nécessaire de produire une application ergonomique et facile d'utilisation permettant la saisie de nombreuses données le plus rapidement possible.
-Limagrain reçoit en effet plus de 1.000 candidatures en moins d'un mois dont une grande partie effectue des contrats.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Solution actuelle}
-
-Le service de recrutement utilisait une petite application Access développée à partir d'un document Excel, de Microsoft Office.
-Ce document comporte une base de données ainsi qu'une interface de saisie.
-\\
-
-Cette solution comporte de nombreux inconvénients.
-
-Tout d'abord, la saisie des données est fastidieuse car l'ergonomie est très sommaire : les champs sont disposés de manière désordonnée sur la page.
-De plus, pour la saisie d'un établissement par exemple, il était nécessaire de saisir son code, sans pouvoir voir directement son nom ou toute autre information.
-
-Les fonctionnalités sont limitées, et se limitent principalement à la saisie.
-Les attentes de l'utilisateur sont donc très loin de ce que propose l'outil actuel.
-
-Enfin, il est impossible de travailler en simultané avec cet outil car les sauvegardes multiples ne sont pas prises en compte.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Solution envisagée}
-
-En étudiant la solution actuelle, les chefs de projet et architectes ont décidé de développer une nouvelle solution, en raison de l'impossibilité de maintenir et faire évoluer l'ancienne.
-Cette nouvelle solution devra répondre aux besoins de l'utilisateur, en corrigeant les inconvénients de l'ancienne ainsi qu'en apportant de nouvelles fonctionnalités.
-\\
-
-Il est tout d'abord nécessaire de changer de base de données pour se tourner vers un système plus performant et centralisé.
-Un nouveau schéma de données adapté aux nouveaux besoins permettra de mieux structurer ces données.
-
-Pour améliorer l'ergonomie de l'application, la nouvelle solution sera un \textit{client léger}.
-Dans ce projet nous ne rencontrerons pas les inconvénients qu'offrent cette solution, comme les performances ou les problèmes qui affecteront tous les utilisateurs.
-Par contre, un simple site web offre les avantages d'un déploiement unique, d'une maintenance simple, car cela ne se fait que sur le serveur et non sur chacun des ordinateurs des utilisateurs.
+Le groupe Limagrain, dont le siège social est situé Chappes, fait actuellement appel aux services de Sopra Group pour la réalisation du projet BOS.
