--- a/src/partie_2.tex
+++ b/src/partie_2.tex
@@ -38,6 +38,10 @@ Lorsque les porteurs sont des personnes diplomatiques ou haut placées, celles-c
 
 \section{Les certificats}
 
+PKI
+Application : utilisation de certificats
+SOD : permet de générer des certificats sans PKI pour tester les applications
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
